# napi-rs-clipboard

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
.husky/: pre-commit
__test__/: index.spec.ts  text.spec.ts
benchmark/: bench.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: clipboard.rs  lib.rs
