[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-rs-clipboard"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }
base64 = "0.22.0"
clipboard-rs = "0.2.4"
duct = "1.0.0"
napi = { version = "2", default-features = false, features = [
  "napi4",
  "async",
  "tokio_rt",
] }
napi-derive = "2"
tokio = "1.45.0"
wsl = "0.1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
